<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/update_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/dips16">

        <TextView
            android:id="@+id/product_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/dips16"
            android:textAppearance="?android:textAppearanceMedium" />

        <TextView
            android:id="@+id/product_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/product_text"
            android:padding="@dimen/dips16" />

        <TextView
            android:id="@+id/supplier"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/supplier_text"
            android:padding="@dimen/dips16" />

        <TextView
            android:id="@+id/quantity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/dips16" />

        <TextView
            android:id="@+id/price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/price_text"
            android:inputType="numberDecimal"
            android:padding="@dimen/dips16" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/update_quantity_text"/>
        <EditText
            android:id="@+id/shipment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/quantity_text"
            android:inputType="number"
            android:padding="@dimen/dips16" />

        <ImageView
            android:id="@+id/image_view"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:scaleType="fitXY"/>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/button_submit"
                style="@style/button_styles"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:text="@string/submit_text" />
        </RelativeLayout>
    </LinearLayout>

</ScrollView>