<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/dips8"
    tools:context="com.linux_girl.myinventory.MainActivity"
    android:background="@color/colorWhite">

    <RelativeLayout
        android:id="@+id/button_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            style="@style/button_styles"
            android:id="@+id/add_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:text="@string/add_product" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/HeaderView"
            android:layout_width="0dp"
            android:layout_weight="60"
            android:layout_height="wrap_content"
            android:text="@string/product_text"
            android:textAllCaps="true"
            android:paddingLeft="@dimen/dips8" />

        <TextView
            style="@style/HeaderView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="20"
            android:text="@string/quantity_text" />

        <TextView
            style="@style/HeaderView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="20"
            android:text="@string/price_text"
            android:textAllCaps="true" />
    </LinearLayout>

    <ListView
        android:id="@+id/list_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />


    <TextView
        android:id="@+id/empty_list_item"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/empty_list"
        android:visibility="gone" />
</LinearLayout>
