<?xml version="1.0" encoding="utf-8"?>
<ScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/dips16">

        <EditText
            android:id="@+id/supplier_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/dips16"
            android:hint="@string/supplier_name_text" />

        <EditText
            android:id="@+id/supplier_contact"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/dips16"
            android:hint="@string/supplier_contact_text" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <Button
                style="@style/button_styles"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/submit_text"
                android:id="@+id/button_submit"
                android:layout_alignParentBottom="true" />

        </RelativeLayout>
    </LinearLayout>
</ScrollView>